# FiestaBoard

./: .cursorrules  .dockerignore  .gitignore  .pylintrc  ANIMATION_PERFORMANCE_TEST.md  ARCHITECTURE_MULTI_FEATURES.md  BAYWHEELS_UI_UPDATE.md  BULK_API_IMPLEMENTATION_SUMMARY.md  CI_CD_APPROACH.md  CLOUD_API_SETUP.md  CODESPACES_SETUP.md  CONTRIBUTING.md  CSS_ANIMATIONS_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEPLOY_TO_SYNOLOGY.md  DEVELOPMENT_PLAN.md  DOCKER_PUBLISHING_FIX.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.api  Dockerfile.ui  Dockerfile.ui-dev  GUEST_WIFI_SETUP.md  HOME_ASSISTANT_ENTITY_PICKER_IMPLEMENTATION.md  HOME_ASSISTANT_ENTITY_PICKER_UPDATED.md  HOME_ASSISTANT_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_DEVELOPMENT.md  MANUAL_TESTING_SNOOZING.md  MUNI_TRAFFIC_ENHANCEMENT_SUMMARY.md  NESTED_LINE_IMPLEMENTATION.md  QUICK_START.md  README.md  RELEASE_PI_IMPLEMENTATION.md  RESEARCH_SUMMARY.md  REVIEW_SUMMARY.md  SCHEDULE_QA_IMPROVEMENTS.md  SECURITY.md  (+32 more)
.cursor/commands/: build.md  deploy-to-nas.md  logs.md  redeploy-quick.md  redeploy.md  restart.md  setup.md  start.md  status.md  stop.md  test-api.md  test-prod-local.md  test-web.md
.cursor/plans/: fix_lighthouse_http2.md  line-level-wrap-feature.md  toolbar-implementation.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker-build.yml  pr-label.yml  publish-images.yml  release.yml
docs/: FEATURES.md
docs-site/: docusaurus.config.ts  package-lock.json
docs-site/docs/: intro.md
docs/deployment/: DEPLOY_TO_SYNOLOGY.md  GITHUB_REGISTRY_SETUP.md  PI_BUILD_GUIDE.md  RASPBERRY_PI_QUICK_START.md
docs/development/: PLUGIN_DEVELOPMENT.md  PWA_TESTING.md
docs/features/: AIR_FOG_SETUP.md  APPLE_MUSIC_SETUP.md  FLIGHTS_SETUP.md  GUEST_WIFI_SETUP.md  HOME_ASSISTANT_SETUP.md  MUNI_SETUP.md  PROPERTY_SETUP.md  PROPERTY_VALUE_API_OPTIONS.md  ROTATION_CONTROL.md  SCHEDULE.md  SCHEDULE_TESTING.md  STAR_TREK_QUOTES_SETUP.md  SURF_SETUP.md  TRAFFIC_API_ALTERNATIVES.md  TRAFFIC_SETUP.md  WEATHER_SETUP.md
docs/reference/: API_RESEARCH.md  APPLE_MUSIC_RESEARCH.md  BULK_API_OPTIMIZATION.md  CHARACTER_CODES.md  COLOR_GUIDE.md  VESTABOARD_CHARACTER_CODES.md
docs/setup/: BEGINNERS_GUIDE.md  CLOUD_API_SETUP.md  CODESPACES_SETUP.md  DOCKER_SETUP.md  LOCAL_DEVELOPMENT.md  RELEASE_CHECKLIST.md
images/: README.md
macos_helper/: README.md  apple_music_service.py  requirements.txt
plugins/_template/: README.md  __init__.py  manifest.json
plugins/air_fog/: README.md  __init__.py  manifest.json
plugins/baywheels/: README.md  __init__.py  manifest.json
plugins/date_time/: README.md  __init__.py  manifest.json
plugins/flights/: README.md  __init__.py  manifest.json
plugins/guest_wifi/: README.md  __init__.py  manifest.json
plugins/home_assistant/: README.md  __init__.py  manifest.json
plugins/last_fm/: README.md  __init__.py  manifest.json
plugins/muni/: README.md  __init__.py  manifest.json
plugins/nearby_aircraft/: README.md  __init__.py  manifest.json
plugins/sports_scores/: README.md  __init__.py  manifest.json
plugins/star_trek_quotes/: README.md  __init__.py  manifest.json
plugins/stocks/: README.md  __init__.py  manifest.json
plugins/sun_art/: README.md  __init__.py  manifest.json
plugins/surf/: README.md  __init__.py  manifest.json
plugins/traffic/: README.md  __init__.py  manifest.json
plugins/visual_clock/: README.md  __init__.py  manifest.json
plugins/weather/: README.md  __init__.py  manifest.json  source.py
plugins/wsdot/: README.md  __init__.py  manifest.json
scripts/: build-pi-image.sh  codespaces_setup.sh  create_test_schedule.py  generate_icons.py  generate_sun_art_images.py  install.ps1  install.sh  migrate_config_to_plugins.py  run_plugin_tests.py  validate_plugins.py  verify_air.py  verify_bikes.py  version-sync.js
src/: __init__.py  api_server.py  board_chars.py  board_client.py  config.py  config_manager.py  main.py  text_to_board.py  time_service.py  vestaboard_chars.py  vestaboard_client.py
src/data_sources/: __init__.py  air_fog.py  apple_music.py  baywheels.py  datetime.py  flights.py  home_assistant.py  muni.py  property.py  star_trek_quotes.json  star_trek_quotes.py  stocks.py  surf.py  traffic.py  traffic_cache.py  transit_cache.py  weather.py
src/displays/: __init__.py  service.py
src/formatters/: __init__.py  message_formatter.py
src/pages/: __init__.py  models.py  service.py  storage.py
src/plugins/: __init__.py  base.py  loader.py  manifest.py  registry.py  testing.py
src/rotations/: __init__.py  models.py  service.py  storage.py
src/schedules/: __init__.py  models.py  service.py  storage.py
src/settings/: __init__.py  service.py
src/system/: __init__.py  docker_manager.py
src/templates/: __init__.py  engine.py
tests/: __init__.py  conftest.py  test_baywheels.py  test_board_client.py  test_debug_endpoints.py  test_displays.py  test_displays_batch.py  test_feature_order.py  test_integration_multi_features.py  test_logs.py  test_muni.py  test_muni_multi_stop.py  test_muni_nested_lines.py  test_output.py  test_pages.py  test_plugin_validation.py  test_property_api.py  test_property_source.py  test_rotation.py  test_schedules_models.py  test_schedules_service.py  test_schedules_storage.py  test_settings_all.py  test_silence_schedule.py  test_silence_schedule_updated.py  test_snoozing_indicator.py  test_stocks.py  test_templates.py  test_time_service.py  test_traffic.py  test_traffic_multi_route.py  test_transit_cache.py  test_vestaboard_client.py
web/: PWA_README.md  RESTRUCTURE_SUMMARY.md  VIEW_TRANSITIONS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  suppress-warnings.mjs  vitest.config.ts
web/.storybook/: main.ts  next.config.js  preview.tsx  theme.ts
web/e2e/: COVERAGE.md  README.md  dashboard.spec.ts  integrations-settings.spec.ts  page-creation.spec.ts  pages-navigation.spec.ts  workflows.spec.ts
web/playwright-report/: index.html
web/public/: manifest.json
web/scripts/: coverage-report.js
web_ui/: index.html
(+241 files in other folders)
